--- a/RTSFramework/RTSFramework.GUI/App.xaml
+++ b/RTSFramework/RTSFramework.GUI/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="RTSFramework.GUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RTSFramework.GUI">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<Application.Resources>
+		
+	</Application.Resources>
 </Application>
