--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -1,21 +1,29 @@
-﻿<Window x:Class="RTSFramework.GUI.MainWindow"
+﻿<Window x:Name="mainWindow" x:Class="RTSFramework.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:gui="clr-namespace:RTSFramework.GUI"
+		xmlns:contractsDelta="clr-namespace:RTSFramework.Contracts.DeltaDiscoverer;assembly=RTSFramework.Contracts"
+		xmlns:runConfig="clr-namespace:RTSFramework.Controller.RunConfigurations;assembly=RTSFramework.Controller"
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:interactionRequest="http://prismlibrary.com/"
+        xmlns:utilities="clr-namespace:RTSFramework.GUI.Utilities"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="RTS Framework" Height="350" Width="525" Icon="Resources/testselection.ico" MinWidth="525" MinHeight="350" WindowStyle="ToolWindow">
 	<i:Interaction.Triggers>
 		<interactionRequest:InteractionRequestTrigger SourceObject="{Binding NotificationRequest, Mode=OneWay}">
 			<interactionRequest:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
 		</interactionRequest:InteractionRequestTrigger>
 	</i:Interaction.Triggers>
 	<Grid>
-		<Label x:Name="LblTest" Content="{Binding MyTestValue, Mode=TwoWay}" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-		<Button x:Name="BtnGitLocalRun" Content="Start Run" HorizontalAlignment="Left" Margin="71,3,0,0" VerticalAlignment="Top" Width="100" Command="{Binding StartRunCommand}" />
-		<TextBox x:Name="TbResult" HorizontalAlignment="Left" Height="274" Margin="0,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="517" Text="{Binding Result}"/>
+		<Button x:Name="BtnGitLocalRun" Content="Start Run" HorizontalAlignment="Left" Margin="5,5,0,0" VerticalAlignment="Top" Width="100" Command="{Binding StartRunCommand}" />
+		<Label x:Name="LblTest" Content="{Binding MyTestValue, Mode=TwoWay}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="110,5,0,0" />
+		<Label x:Name="LblProcessingType" Content="Processing Type:" HorizontalAlignment="Left" Margin="0,32,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="CbProcessingType" HorizontalAlignment="Left" Margin="129,36,0,0" VerticalAlignment="Top" Width="200" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type runConfig:ProcessingType}}}" />
+		<Label x:Name="LblDiscoveryType" Content="Discovery Type:" HorizontalAlignment="Left" Margin="0,58,0,0" VerticalAlignment="Top"/>
+		<ComboBox x:Name="CbDiscoveryType" HorizontalAlignment="Left" Margin="129,62,0,0" VerticalAlignment="Top" Width="200" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type contractsDelta:DiscoveryType}}}" />
+		<TextBox x:Name="TbResult" HorizontalAlignment="Stretch" Margin="5,157,5,5" TextWrapping="Wrap" VerticalAlignment="Stretch" Text="{Binding Result}" IsReadOnly="True"  />
+		<Label x:Name="LblResult" Content="Result:" HorizontalAlignment="Left" Margin="5,131,0,0" VerticalAlignment="Top"/>
 	</Grid>
 </Window>
