--- a/RTSFramework/RTSFramework.GUI/MainWindow.xaml
+++ b/RTSFramework/RTSFramework.GUI/MainWindow.xaml
@@ -4,7 +4,6 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:utilities="clr-namespace:RTSFramework.GUI.Utilities"
-        xmlns:deltaDiscoverer="clr-namespace:RTSFramework.Contracts.DeltaDiscoverer;assembly=RTSFramework.Contracts"
         xmlns:models="clr-namespace:RTSFramework.Contracts.Models;assembly=RTSFramework.Contracts"
         xmlns:converters="clr-namespace:RTSFramework.GUI.Converters"
         xmlns:viewModels="clr-namespace:RTSFramework.ViewModels;assembly=RTSFramework.ViewModels"
@@ -43,11 +42,11 @@
 				<ColumnDefinition Width="200*"/>
 			</Grid.ColumnDefinitions>
 
-			<Label x:Name="LblSolutionFile" Content="Solution File:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Width="86" Grid.Column="0" Grid.Row="0"/>
-			<Label x:Name="LblProgramModelType" Content="Program Model:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Width="95" Grid.Column="0" Grid.Row="1" />
-			<Label x:Name="LblDiscoveryType" Content="Delta Discovery:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Width="95" Grid.Column="0" Grid.Row="2"/>
-			<Label x:Name="LblRTSApproachType" Content="RTS Approach:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Width="86" Grid.Column="0" Grid.Row="3"/>
-			<Label x:Name="LblProcessingType" Content="Processing:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Width="69" Grid.Column="0" Grid.Row="4" />
+			<Label x:Name="LblSolutionFile" Content="Solution File:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Grid.Column="0" Grid.Row="0"/>
+			<Label x:Name="LblProgramModelType" Content="Program Model:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Grid.Column="0" Grid.Row="1" />
+			<Label x:Name="LblDiscoveryType" Content="Delta:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Grid.Column="0" Grid.Row="2"/>
+			<Label x:Name="LblRTSApproachType" Content="Selection:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Grid.Column="0" Grid.Row="3"/>
+			<Label x:Name="LblProcessingType" Content="Tests Processing:" HorizontalAlignment="Left" VerticalAlignment="Center" Height="26" Grid.Column="0" Grid.Row="4" />
 
 			<TextBox x:Name="TbSolutionFilePath" Height="23" VerticalContentAlignment="Center" Margin="0,0,30,0" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding SolutionFilePath}" Grid.Column="1" Grid.Row="0"/>
 			<Button x:Name="BtnSelectSolutionFile" Command="{Binding SelectSolutionFileCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="23" Grid.Column="1" Grid.Row="0"/>
@@ -62,7 +61,7 @@
 			<ComboBox x:Name="CbGranularityLevel" VerticalAlignment="Center" ItemsSource="{Binding Source={utilities:EnumBindingSource {x:Type models:GranularityLevel}}}" SelectedItem="{Binding GranularityLevel}" Grid.Column="3" Height="22" Visibility="{Binding IsGranularityLevelChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Row="3" Grid.RowSpan="2" />
 			<TextBox x:Name="TbGitRepositoryPath" Height="23" VerticalContentAlignment="Center" Margin="0,0,30,0" TextWrapping="NoWrap" AcceptsReturn="False" VerticalAlignment="Center" Text="{Binding RepositoryPath}" Visibility="{Binding IsGitRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="3"  Grid.Row="1"/>
 			<Button x:Name="BtnSelectRepositoryPath" Command="{Binding SelectRepositoryCommand}" Content="..." HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="23" Visibility="{Binding IsGitRepositoryPathChangable, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="3"  Grid.Row="1"/>
-			<Button x:Name="BtnIntendedChanges" Command="{Binding SpecitfyIntendedChangesCommand}" Content="IntendedChanges" HorizontalAlignment="Center" VerticalAlignment="Center" Width="105" Height="23" Visibility="{Binding IsIntededChangesEditingEnabled, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="2"  Grid.Row="2"/>
+			<Button x:Name="BtnIntendedChanges" Command="{Binding SpecitfyIntendedChangesCommand}" Content="Intended Changes" HorizontalAlignment="Center" VerticalAlignment="Center" Width="105" Height="23" Visibility="{Binding IsIntededChangesEditingEnabled, Converter={converters:VisibilityConverter}, Mode=OneWay}" Grid.Column="2"  Grid.Row="2"/>
 
 		</Grid>
 		<Label x:Name="LblResult" Content="Result:" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Height="26" Width="45" Grid.Row="2" Grid.Column="0" />
